# pymodbus-waveshare-relay

./: README.md  pyproject.toml
.github/workflows/: ci.yml
pymodbus_waveshare_relay/: __init__.py  pdu.py
pymodbus_waveshare_relay/_tests/: __init__.py  test_encoding.py
