[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymodbus-waveshare-relay"
version = "0.1.0"
description = "Python pymodbus extensions for Waveshare Modbus RTU relay modules with support for vendor-specific commands"
authors = [{ name = "NigelB" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
license-files = [
    "LICENSE",
]
dependencies = [
    "pymodbus",
    "pyserial"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 150

[tool.mypy]
python_version = "3.10"
strict = true

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"*_tests/*.py" = ["S101"]
"tests/*.py" = ["S101"]
